# edge_frame

./: .gitignore  CMakeLists.txt  README.md  package.sh
cmake/: arm.cmake  hisi.cmake
config/: service_dev.json
include/: SolutionPipeline.h  VideoRecorder.h  common.h  init.h  util.h
include/app/: ServiceDaemon.h
include/event/: Event.h
include/mgr/: ConfigureManager.h  ObjectManager.h  QueueManager.h
include/network/: HttpClient.h
include/processor/: CaptureProcessor.h  DataLoaderProcessor.h  DetectorProcessor.h  DispatchProcessor.h  DynamicFactory.h  FlowRpcAsynProcessor.h  MonitorProcessor.h  Processor.h  head.h
modules/: CMakeLists.txt  Readme.md
modules/NE/Tengine/include/: TengineImpl.hpp  common.h
modules/NE/Tengine/src/: TengineImpl.cpp
modules/api/include/: Detect.h  FaceAttribute.h  FaceDetectWithMask.h  FaceFeature.h  FaceID.h  FaceScore.h  FeatureReID.h  inference.h  sdk.h
modules/api/src/: Detect.cpp  FaceDetectWithMask.cpp  inference.cpp  sdk.cpp
modules/interfaces/: AlgoData.h  ServiceMetricManager.h  SysPublicTool.h  interface.h
modules/track/: CMakeLists.txt
modules/track/include/: Hungarian.h  KalmanTracker.h  Sort.h  TrackObjectInterface.h  tracker.h
modules/track/src/: Hungarian.cpp  KalmanTracker.cpp  TrackObjectInterface.cpp  tracker.cpp
package/: package.sh
package/arm/: upgrade.sh
package/arm/files/etc/: cvlib.sh
package/arm/files/etc/supervisor/conf.d/: algo.conf
package/arm/files/home/nvidia/FLOW/config/: service_default.json
package/hisi/: upgrade.sh
package/hisi/files/mnt/whale/daemon/conf/: algo.conf
package/hisi/files/mnt/whale/service/algo/config/: service_default.json
src/: SolutionPipeline.cpp  SysPublicTool.cpp  VideoRecorder.cpp  common.cpp  init.cpp  util.cpp
src/app/: ServiceDaemon.cpp  main.cpp
src/event/: Event.cpp
src/mgr/: ConfigureManager.cpp  ServiceMetricManager.cpp
src/network/: HttpClient.cpp
src/processor/: DataLoaderProcessor.cpp  DetectorProcessor.cpp  DispatchProcessor.cpp  FlowRpcAsynProcessor.cpp  LocalVideoLoaderProcessor.cpp  MonitorProcessor.cpp  Processor.cpp  RtspLoaderProcessor.cpp  UsbDeviceLoaderProcessor.cpp
